--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^4.19.2",
     "node-fetch": "^2.7.0"
